# vuec-rs

./: Cargo.toml  README.md  rustfmt.toml
benchmark/: Cargo.toml
vuec-cli/: Cargo.toml
vuec-core/: Cargo.toml  README.md
vuec-core/src/: codegen.rs  errors.rs  lib.rs  options.rs  parse.rs  re.rs  runtime_helpers.rs  transform.rs  utils.rs
vuec-core/src/ast/: attr.rs  codegen.rs  el.rs  expr.rs  js_child.rs  mod.rs  parent.rs  stmt.rs  template_child.rs  utils.rs
vuec-core/src/compat/: options.rs
vuec-core/src/shared/: flags.rs
vuec-core/src/transforms/: hoist_static.rs  mod.rs  v_for.rs
vuec-core/tests/: tests.rs
vuec-core/tests/codegen/: mod.rs
vuec-core/tests/compile/: mod.rs  scope_id.rs
vuec-core/tests/parse/: comment.rs  decode_entities.rs  element.rs  interpolation.rs  mod.rs  text.rs  whitespace_condense.rs  whitespace_preserve.rs
vuec-core/tests/transform/: mod.rs
vuec-dom/: Cargo.toml
vuec-plugins/: Cargo.toml
vuec-sfc/: Cargo.toml
vuec-ssr/: Cargo.toml
