[package]
name = "vuec-core"
version = "0.0.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[lib]
#crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell.workspace = true
regex.workspace = true
ahash.workspace = true
#rand.workspace = true
#dotenv.workspace = true
#dotenv_codegen.workspace = true

#serde.workspace = true
#serde_json.workspace = true

# swc.workspace = true
# swc_common.workspace = true

# swc_ecma_ast.workspace = true
# swc_ecma_parser.workspace = true
# swc_ecma_codegen.workspace = true

# swc_css_ast.workspace = true
# swc_css_parser.workspace = true
# swc_css_codegen.workspace = true
